--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,9 @@
     <meta name="description" content="Realtime clipboard to easily and secure share text between computers or mobile devices">
     <meta name="keywords" content="clipboard, online, real time, virtual, sharing, computer, mobile, exchange, copy, paste, transfer, secure">
     <meta name="author" content="Tim de Pater - TrafeX.nl">
+    <meta name="theme-color" content="#2b3e50">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
 
 </head>
 <body role="document">
