Removed default Nginx server. Added comments where needed

--- a/web/index.html
+++ b/web/index.html
@@ -136,7 +136,7 @@
             </div>
         </div>
     <footer>
-        Created by <a href="http://www.trafex.nl">Tim de Pater</a>
+        Created by <a href="https://www.trafex.nl">Tim de Pater</a>
     </footer>
     </div>
 
